[package]
name = "libucl-sys"
version = "0.2.0"
description = "Low-level bindings to libucl."
authors = ["Łukasz Niemier <lukasz@niemier.pl>"]
build = "build.rs"
license-file = "LICENSE"
repository = "https://github.com/hauleth/libucl-sys"

[lib]
name = "libucl_sys"
path = "lib.rs"

[dependencies]
libc = "*"
bitflags = ">=0.9"
